docker compose fix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3.8"
 services:
   web:
-    build: ./inkseek
+    build: .
     ports:
       - "8080:80"
     volumes:
-      - ./inkseek:/usr/share/nginx/html:ro
+      - .:/usr/share/nginx/html:ro
     restart: unless-stopped
